# toothless

./: .gitignore  README.md  cache.py  classic_ml.py  container.def  infer.py  infer_disentangled_tt.py  infer_this.py  infer_tree_transformer.py  infer_vanilla_tt.py  justfile  language_model.py  pyproject.toml  train.py  train.sh  train_disentangled_tt.py  train_tree_transformer.py  train_vanilla_tt.py  tree_autoencoder.py  tree_transformer.py  usefulness.py  util.py
apptainer/: build_apptainer.sh  python_container.def
deepspeed/: ds_config_zero2 copy.json  ds_config_zero2.json
old/: infer_disentangled_tt.py  infer_disentangled_tt.sh  train_disentangled_tt.py  train_disentangled_tt.sh
old/layers_and_model/: disentangled.py
old/layers_and_model/disentangled/: decoder.py  embedding.py  encoder.py  ff.py  mha.py  rel_pos.py
scripts/: clean_unfinished.sh  infer.sh  infer_disentangled_tt.sh  infer_tree_transformer.sh  infer_vanilla_tt.sh  mk_cache.sh  singularity_build.sh  slurm_train.sh  train.sh  train_disentangled_tt.sh  train_lm.sh  train_tree_autoencoder.sh  train_tree_transformer.sh  train_vanilla_tt.sh  usefulness.sh
singularity/: build.sh  container.def  slurm_job.sh
toothless/: __main__.py  args.py  classic_ml.py  collators.py  consts.py  data.py  eval.py  graph_embedding.py  halide.py  inference.py  language_model.py  loading.py  main.py  model.py  plotting.py  ppo.py  rl_env.py  symbols.py  tokenizer.py  train.py  util.py  utils.py  vocab.py
toothless/components/: __init__.py  decoder.py  encoder.py  rel_pos.py  utils.py
toothless/gnn/: data.py
toothless/language_model/: args.py
toothless/layers/: attention.py  decoder.py  encoder.py  projection.py  rope.py  swiglu.py  utils.py
toothless/models/: disentangled.py  utils.py  vanilla.py
toothless/models/layers/: __init__.py  utils.py
toothless/models/layers/disentangled/: __init__.py  decoder.py  embedding.py  encoder.py  mha.py
toothless/models/layers/vanilla/: attention.py  decoder.py  encoder.py
toothless/tree_autoencoder/: data.py
toothless/tree_model/: args.py  components.py  data.py  dataset.py  embeddings.py  generator.py  model.py  utils.py  vocab.py
toothless/tree_model/components/: decoder.py  encoder.py  generator.py  mha.py  rel_pos.py  utils.py
toothless/utils/: consts.py  dist_helper.py  eval.py  loading.py  logging.py  plotting.py
