[project]
name = "toothless"
version = "0.1.0"
description = "ML for EGraphs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3",
    "tensorboard>=2",
    "torch>=2",
    "tqdm>=4",
    "scikit-learn>=1.5.2",
    "polars>=1.21.0",
    "python-dotenv>=1.0.1",
    "torch-tb-profiler>=0.4.3",
    "standard-imghdr>=3.13.0",
    "prettytable>=3.16.0",
    "dataclass-wizard>=0.35.0",
    "termcolor>=3.1.0",
    "eggshell",
    "tyro>=0.9.26",
]
# "transformers>=4.48.2",
# "tokenizers>=0.21.0",

[tool.pyright]
exclude = ["data", "cache", "logs"]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.uv.sources]
eggshell = { path = "cache/eggshell-0.0.1-cp312-abi3-manylinux_2_39_x86_64.whl" }

[dependency-groups]
dev = []
